Update CMakeLists.txt and header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,10 +68,50 @@ option(BUILD_IMGUI "Build Ocornut Imgui" ON)
 
 option(BUILD_SKYLICHT_NETWORK "Build Http, Socket module" ON)
 
+option(USE_OPENMP "Use openmp for multithread optimize" ON)
+
 include(PlatformConfig.cmake)
 
+if (USE_OPENMP)
+	if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
+		# AppleClang
+		find_package(OpenMP REQUIRED)
+		if (OPENMP_FOUND)
+			set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp")
+			set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp")
+			
+			set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+			set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+			
+			find_file(OMP_H_PATH NAME omp.h HINTS OpenMP)
+			get_filename_component(OMP_INCLUDE_DIR ${OMP_H_PATH} DIRECTORY)
+			include_directories(${OMP_INCLUDE_DIR})
+			
+			find_library(OMP_LIBRARY NAMES omp)
+			link_libraries(${OMP_LIBRARY})
+			
+			message(STATUS "- OpenMP library found: ${OMP_H_PATH}")
+			message(STATUS "- OpenMP include directory: ${OMP_INCLUDE_DIR}")
+			message(STATUS "- OpenMP link directory: ${OMP_LIBRARY}")
+			
+			add_definitions(-DUSE_OPENMP)
+		else()
+			message(STATUS "! OpenMP library not found! $>brew install libomp")
+		endif()
+	elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+		# using Visual Studio C++
+		add_compile_options(/openmp)
+		add_definitions(-DUSE_OPENMP)
+	else()
+		# using GCC & Clang++ (android)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
+		add_definitions(-DUSE_OPENMP)
+	endif()
+endif()
+
 if (BUILD_SKYLICHT_NETWORK)
-	add_definitions(-DHAVE_SKYLICHT_NETWORK)
+	add_definitions(-DUSE_SKYLICHT_NETWORK)
 	# enable curl
 	set(BUILD_CURL ON)
 	add_definitions(-DHAVE_CURL)
