Update simulateTransform skeleton

--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -123,8 +123,12 @@ install (DIRECTORY ${SKYLICHT_ENGINE_PROJECT_DIR}/Irrlicht/Include
 	FILES_MATCHING PATTERN "*.h*")
 
 install (DIRECTORY ${SKYLICHT_ENGINE_PROJECT_DIR}/Irrlicht/Source/Angle
-	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Irrlicht
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Irrlicht/Source
 	FILES_MATCHING PATTERN "*.h*")
+
+if(BUILD_MACOS OR BUILD_IOS)
+install (DIRECTORY ${SKYLICHT_ENGINE_PROJECT_DIR}/Angle DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR})
+endif()
 
 install(EXPORT IrrlichtTargets
 	FILE IrrlichtTargets.cmake
