Update circle ci build Android

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,23 +5,38 @@ commands:
     steps:
       - run:
           command: >
-            cmake -S. -BPrjAndroid-$ABI -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=$ABI -DANDROID_ARM_NEON=ON -DANDROID_NATIVE_API_LEVEL=24
+            cmake -S. -BPrjAndroid-$ABI -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=$ABI -DANDROID_ARM_NEON=ON -DANDROID_NATIVE_API_LEVEL=26
+
             make -C PrjAndroid-$ABI
           name: Build Skylicht Engine Native SDK
   build-android-apk:
     steps:
       - run:
           command: >
-            mkdir Projects/Android/app/src/main/jniLibs/$ABI
-            copy Bin/Android/Libs/$ABI/libSampleSkinnedMesh.so Projects/Android/app/src/main/jniLibs/$ABI
+            export ANDROID_ASSET_PATH=Projects/Android/app/src/main/assets
+
+            export ANDROID_JNILIBS_PATH=Projects/Android/app/src/main/jniLibs
+
+            mkdir $ANDROID_JNILIBS_PATH/$ABI
+
+            cp Bin/Android/Libs/$ABI/$APP_NAME $ANDROID_JNILIBS_PATH/$ABI
+
             cd Assets
+
             python BuildAssetBundles.py
+
             cd ..
-            mkdir Projects/Android/app/src/main/assets
-            copy Bin/BuiltIn.zip Projects/Android/app/src/main/assets
-            copy Bin/Common.zip Projects/Android/app/src/main/assets
-            copy Bin/SampleModelsResource.zip Projects/Android/app/src/main/assets
+
+            mkdir $ANDROID_ASSET_PATH
+
+            cp Bin/BuiltIn.zip $ANDROID_ASSET_PATH
+
+            cp Bin/Common.zip $ANDROID_ASSET_PATH
+
+            cp Bin/SampleModelsResource.zip $ANDROID_ASSET_PATH
+
             cd Projects/Android
+
             ./gradlew assembleDebug
           name: Build Android APK
 jobs:
@@ -30,6 +45,7 @@ jobs:
       - image: cimg/android:2024.04.1-ndk
     environment:
       ABI: arm64-v8a
+      APP_NAME: libSampleSkinnedMesh.so
     steps:
       - checkout
       - build-engine-native
