--- a/Projects/Android/app/build.gradle
+++ b/Projects/Android/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 android {
     compileSdkVersion 34
     buildToolsVersion "34.0.0"
-
+    namespace "com.yourteam.appname"
     defaultConfig {
         applicationId "com.yourteam.appname"
         minSdkVersion 26
@@ -15,7 +15,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -32,7 +31,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.+'
