--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ commands:
             cmake -S. -BPrjAndroid-$ABI -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=$ABI -DANDROID_ARM_NEON=ON -DANDROID_NATIVE_API_LEVEL=26
 
             make -C PrjAndroid-$ABI
-          name: Build Skylicht Engine NDK
+          name: Build Skylicht Engine (NDK)
   build-android-apk:
     steps:
       - run:
@@ -39,9 +39,11 @@ commands:
 
             cd Projects/Android
 
+            ls -l $ANDROID_HOME
+
             sudo chmod +x ./gradlew
 
-            sudo ./gradlew assembleDebug
+            sudo ./gradlew assembleDebug --scan
           name: Build Android APK
 jobs:
   build-android:
@@ -50,9 +52,6 @@ jobs:
     environment:
       ABI: arm64-v8a
       APP_NAME: libSampleSkinnedMesh.so
-      ANDROID_HOME: /home/circleci/android-sdk
-      ANDROID_SDK_ROOT: /home/circleci/android-sdk
-      ANDROID_NDK_ROOT: /home/circleci/android-sdk/ndk/26.3.11579264
     steps:
       - checkout
       - build-engine-native
