Update build android project

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ commands:
 
             sudo chmod +x ./gradlew
 
-            sudo ./gradlew assembleDebug --scan
+            sudo ./gradlew assembleDebug
           name: Build Android APK
 jobs:
   build-android:
