--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,15 +17,19 @@ commands:
 
             chmod +x ../Tools/PVRTexTool/linux/PVRTexToolCLI
 
-            sudo apt install python-pip
+            sudo apt-get update
+            
+            sudo apt install python3
 
-            pip install tinydb
+            sudo apt install python3-pip
+
+            pip3 install tinydb
           
-            pip install Pillow
+            pip3 install Pillow
 
-            python BuildTextureCompressETC.py
+            python3 BuildTextureCompressETC.py
 
-            python BuildAssetBundles.py
+            python3 BuildAssetBundles.py
 
             cd ..
           name: Build Assets, ETC Textures
