--- a/Projects/Android/app/build.gradle
+++ b/Projects/Android/app/build.gradle
@@ -6,6 +6,7 @@ android {
     compileSdkVersion 34
     buildToolsVersion "34.0.0"
     namespace "com.skylicht.engine3d"
+    assetPacks = [":app-data"]
     defaultConfig {
         applicationId "com.yourteam.appname"
         minSdkVersion 26
